# porerefiner

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  SECURITY.md  SampleSheet.csv  SampleSheetSample.csv  config.yaml  install_services.sh  pyproject.toml  requirements_dev.txt  runs  setup.cfg  setup.py  stdeb.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
porerefiner/: __init__.py  cli.py  cli_utils.py  config.py  daemon.py  fsevents.py  jobs.py  models.py  porerefiner.app.service  porerefiner.py  porerefiner.service  protocol.py  rpc.py  samplesheets.py
porerefiner/app/: __init__.py  main.py  page.py
porerefiner/app/templates/: run_view.html  submit.html  view.html
porerefiner/jobs/: __init__.py  epi2me.py  fda_specific.py  generic.py  guppy.py
porerefiner/jobs/submitters/: __init__.py  epi2me.py  hpc.py  local.py
porerefiner/notifiers/: __init__.py  galaxy.py  http.py  sqs.py  toast.py
porerefiner/protocols/: porerefiner.proto
porerefiner/protocols/porerefiner/: porerefiner_grpc.py  porerefiner_pb2.py
porerefiner/samplesheets/: __init__.py  __main__.py  sniffers.py
tests/: __init__.py  conftest.py  profile.py  test_cli.py  test_cli_utils.py  test_config.py  test_flask.py  test_fsevents.py  test_models.py  test_performance.py  test_porerefiner.py  test_samplesheets.py
tests/test_jobs/: __init__.py  test_hpc.py  test_jobs.py  test_submitter.py
tests/test_notifiers/: __init__.py  test_http.py  test_sqs.py
(+25 files in other folders)
