[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "porerefiner"
authors = [
    {name = "Justin Payne", email = "justin.payne@fda.hhs.gov"},
]
description = "To help you manage your pores"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["porerefiner"]
classifiers = [
        'Development Status :: 2 - Pre-Alpha',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Natural Language :: English',
        'Programming Language :: Python :: 3.8',
]
dependencies = [
    'click',
    'flask',
    'peewee',
    'gunicorn',
    'hachiko',
    'aiohttp',
    'aiofile',
    'namesgenerator',
    'python-daemon',
    'protobuf',
    'grpclib',
    'tabulate',
    'asyncssh',
    'setproctitle',
    'pyyaml'
]
dynamic = ["version"]

[project.urls]
Homepage = 'https://github.com/CFSAN-Biostatistics/porerefiner'

[project.optional-dependencies]
test = [    'hypothesis~=4.57.1',
            'hypothesis-fspaths~=0.1',
            'Mock~=4.0.0',
            'aiounittest~=1.3.0']
dev = [ 'grpcio-tools',
        'configparser',
        'pytest',
        'hypothesis',
        'black',
        'flake8',
        'sphinx',
        'tox',
        'twine',
        'coverage',
        'zest.releaser',
        ]

[project.scripts]
porr = "porerefiner.cli:cli"
porerefinerd = "porerefiner.porerefiner:cli"


[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]